--- a/.github/workflows/python-build-publish.yaml
+++ b/.github/workflows/python-build-publish.yaml
@@ -3,10 +3,10 @@ name: Build and upload to PyPI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   release:
     types:
       - published
