--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel", "setuptools_scm", "cmake", "scikit-build"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel.linux]
-before-all = "yum install -y git cmake python3-pip libasound2-dev libsndfile1-dev libsoundio-dev fftw3-dev"
+before-all = "yum install -y libasound2 libsndfile1 libsoundio-devel fftw3-devel"
 
 [tool.cibuildwheel.macos]
 before-all = "brew install cmake libsndfile libsoundio"
