--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,44 @@
+[project]
+name = "signalflow"
+version = "0.5.0"
+description = "SignalFlow is a sound synthesis library designed for clear and concise expression of sonic ideas"
+readme = "README.md"
+authors = [{ name = "Daniel Jones", email = "dan@erase.net" }]
+license = { text = "MIT" }
+keywords = ["audio", "sound", "synthesis", "dsp", "sound-synthesis"]
+classifiers = [
+    "Topic :: Multimedia :: Sound/Audio",
+    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
+    "Topic :: Artistic Software",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+]
+requires-python = ">=3.8"
+dependencies = ["numpy"]
+
+[project.optional-dependencies]
+test = ["pytest", "numpy", "scipy"]
+
+[project.scripts]
+signalflow = "signalflow_cli:main"
+
 [build-system]
-requires = ["setuptools", "wheel", "setuptools_scm", "cmake", "scikit-build"]
+requires = [
+    "setuptools",
+    "setuptools_scm",
+    "cmake",
+    "scikit-build",
+    "pytest-runner",
+    "pybind11-stubgen",
+]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "auxiliary/libs"}
+
+[tool.setuptools.package-data]
+signalflow_stubs = ["*.pyi"]
+signalflow = ["*.pyd"]
 
 [tool.cibuildwheel]
 build = [
