--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,12 +51,14 @@ skip = [
 archs = ["x86_64"]
 before-all = [
     "yum install -y fftw-devel wget python3 sudo gcc",
+    # jackaudio
     "wget https://github.com/jackaudio/jack2/archive/v1.9.22.tar.gz",
     "tar xzf v1.9.22.tar.gz",
     "cd jack2-1.9.22",
     "python3 ./waf configure",
     "/usr/bin/sudo python3 ./waf install",
     "cd ..",
+    # "alsa-lib",
     "wget https://www.alsa-project.org/files/pub/lib/alsa-lib-1.2.9.tar.bz2",
     "tar xjf alsa-lib-1.2.9.tar.bz2",
     "cd alsa-lib-1.2.9",
@@ -64,12 +66,14 @@ before-all = [
     "make",
     "/usr/bin/sudo make install",
     "cd ..",
+    # libsndfile
     "git clone https://github.com/libsndfile/libsndfile.git",
     "cd libsndfile",
     "cmake -DBUILD_SHARED_LIBS=1 .",
     "make",
     "make install",
     "cd ..",
+    # miniaudio
     "curl https://raw.githubusercontent.com/mackron/miniaudio/master/miniaudio.h -o source/include/signalflow/node/io/output/miniaudio-library.h",
 ]
 
